crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_pypi_dependency_reuses_existing_feature_table.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: result
---
[project]
name = "test"

[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.feature.cuda.pypi-dependencies]
torch = ">=2.0.0"
numpy = ">=1.20.0"
