crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__prepend_activation_scripts_moves_to_front.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[workspace]
channels = []
name = "test"
platforms = []

[activation]
scripts = ["b.sh", "new.sh", "a.sh"]
