crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__reformat_array_multiline_empty_array.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: doc.to_string()
---

[project]
dependencies = []
