crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__reformat_array_multiline_preserves_all_comment_types.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: doc.to_string()
---

[project]
dependencies = [
    # own-line comment
    "numpy>=1.0",     # end-of-line comment
    # second own-line comment
    "pandas>=2.0",
    # comment before closing
] # actual trailing comment
