crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__reformat_array_multiline_preserves_inline_comment_without_padding.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: doc.to_string()
---

[project]
dependencies = [
    "attrs>=25.4.0",#comment
    "numpy>=1.0",
    "requests>=2.0",#another inline comment
]
