crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__remove_activation_entries_cleans_up_tables.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[workspace]
channels = []
name = "test"
platforms = []

[dependencies]
