crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__remove_pypi_dependency.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[project]
name = "pixi-demo"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]
