crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__set_activation_env_retains_decoration.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[workspace]
channels = []
name = "test"
platforms = []

[activation]
# The environment variables.
env = { FOO = "new", BAR = "baz" } # trailing comment
